--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,33 @@
 astropy==5.0
-async-generator==1.10     
+async-generator==1.10
 autopep8==1.6.0
-ax-platform==0.2.2        
-bokeh==2.4.2              
-bottleneck==1.3.2         
-brotlipy==0.7.0           
-catboost==1.0.4           
-cytoolz==0.11.2           
-deap==1.3.1               
-distributed==2021.12.0    
-geostatspy==0.0.22        
+ax-platform==0.2.2
+bokeh==2.4.2
+bottleneck==1.3.2
+brotlipy==0.7.0
+catboost==1.0.4
+cytoolz==0.11.2
+deap==1.3.1
+distributed==2021.12.0
+fonttools==4.25.0
+geostatspy==0.0.22
 importlib-metadata==4.10.0
-impyute==0.0.8            
-ipywidgets==7.6.5         
-jupyterlab==3.2.9         
-kaleido==0.2.1            
+impyute==0.0.8
+ipywidgets==7.6.5
+jupyterlab==3.2.9
+kaleido==0.2.1
 missingno==0.4.2
 munkres==1.1.4
 netcdf4==1.5.8
 numexpr==2.7.3
 olefile==0.46
 openpyxl==3.0.5
+pip-chill==1.0.1
 pyopenssl==22.0.0
 pysocks==1.7.1
 pytest==6.2.5
 pytest-runner==5.3.1
+pyvista==0.38.5
 ray==1.9.0
 scoop==0.7.1.1
 shap==0.40.0
@@ -33,6 +36,7 @@ statsmodels==0.12.2
 sweetviz==2.1.3
 tabulate==0.8.9
 tensorboardx==2.4.1
+trame==2.3.2
 utm==0.7.0
 win-inet-pton==1.1.0
 wincertstore==0.2
